Fix Singup misalign in different scale issue and login re-direction

--- a/LostAndFound/www/css/signup.css
+++ b/LostAndFound/www/css/signup.css
@@ -36,6 +36,10 @@ body {
 .cover-container {
     margin-right: auto;
     margin-left: auto;
+    position: fixed;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, 0%);
 }
 
 .main-container {
